--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "vite",
     "build": "vite build",
     "serve": "vite preview",
-    "format": "biome format --write src",
+    "format": "biome check --write src",
     "lint": "biome check src"
   },
   "license": "MIT",
