--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vite-plugin-solid": "^2.11.6"
   },
   "dependencies": {
+    "@solidjs/router": "^0.15.3",
     "solid-js": "^1.9.5",
     "tailwindcss": "^4.1.8"
   }
